--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         new WOW().init();
 
     </script>
+	</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 
 <body>
@@ -188,6 +189,10 @@
                     </li>
                 </ul>
             </div>
+		<div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}</div>
         </div>
     </div>
     <!-- Primary Page Layout
