--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Pavan Nayak - Software/Web Developer [aka Kingvipz, Kingvipzgr, Kingvipzcg]</title>
     <meta content="Pavan Nayak [aka Kingvipz, Kingvipzgr, Kingvipzcg] Developer Portfolio" name="description">
-    <meta content="Pavan Margariris" name="author">
+    <meta content="Pavan Nayak" name="author">
     <!-- Mobile Specific Metas
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -38,8 +38,8 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="images/favicon.png" rel="icon" type="image/png">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
-    <meta content="Pavan M. - UI/UX Designer [Kingvipz]" property="og:title">
-    <meta content="Pavan M. - UI/UX Designer [Kingvipz]" property="og:site_name">
+    <meta content="Pavan M. - Software Developer [Kingvipz]" property="og:title">
+    <meta content="Pavan M. - Software Developer [Kingvipz]" property="og:site_name">
     <meta content="Browse all my work!" property="og:description">
     <meta content="http://Kingvipzgr.com" property="og:url">
     <meta content="og_image_1200x630.jpg" property="og:image">
@@ -125,8 +125,6 @@
     </div>
     <!-- Navigation Large
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-
     <div class="nav">
         <div class="navbar">
             <div class="container">
@@ -188,11 +186,8 @@
                         <a class="navbar-link" href="#footer">Contact</a>
                     </li>
                 </ul>
-            </div>
-		<div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}</div>
+     </div>
+
         </div>
     </div>
     <!-- Primary Page Layout
@@ -227,7 +222,7 @@ function googleTranslateElementInit() {
 					
 
 
-                    <h6>I am at present Working as a Mid-Senior Software Developer with <a href="http://investt.com" target="_blank">Trapeze Group-Investt Solutions</a>. I also hold a Bachelors and Masters degree in Computer Application, and Masters in Internetworking and I have worked for 2 plus years as a Software/Web Developer. Since the age of 13, I have delved into numerous programming languages. My interest in designing and developing <br> engaging user interfaces is what drove me to specialise <br> in software and web Development.
+                    <h6>I am at present Working as a Mid-Senior Software Developer with <a href="http://investt.com" target="_blank">Ombura-Investt Solutions</a>. I also hold a Bachelors and Masters degree in Computer Application, and Masters in Internetworking and I have worked for 2 plus years as a Software/Web Developer. Since the age of 13, I have delved into numerous programming languages. My interest in designing and developing <br> engaging user interfaces is what drove me to specialise <br> in software and web Development.
                         <br> Wanna have a look at my work?<br>
                         <br>
                         <strong>Scroll down</strong> <br>for projects or check the following
